--- a/src/public/assets/css/dashboard.css
+++ b/src/public/assets/css/dashboard.css
@@ -1,10 +1,10 @@
 /* Base Layout Styles */
 #sidebarMenu {
     background: linear-gradient(180deg, #26648E 0%, #1E4F6F 100%);
-    height: 100vh;
+    height: 100%;
     position: fixed;
-    padding-top: 60px;
-    padding-bottom: 40px;
+    top: 65px;
+    padding-bottom: 65px;
     bottom: 0;
     left: 0;
     width: 250px;
